# quadrover_simulation

./: .gitignore  README.md
docs/: README.md  four_wheel_localization.md  quadrover_bringup.md  quadrover_control.md  quadrover_description.md  quadrover_gazebo.md  quadrover_localization.md  robot_bringup.md  robot_control.md  robot_description.md  robot_gazebo.md  runtime.md
scripts/: build.sh  kill_sim.sh
src/four_wheel_localization/: CMakeLists.txt  package.xml
src/four_wheel_localization/config/: wheel_only.yaml
src/four_wheel_localization/launch/: localization.launch.py
src/quadrover_bringup/: CMakeLists.txt  package.xml
src/quadrover_bringup/launch/: sim_example.launch.py
src/quadrover_control/: CMakeLists.txt  package.xml
src/quadrover_control/config/: drive_modes.json
src/quadrover_control/urdf/: drive_plugins.xacro
src/quadrover_description/: CMakeLists.txt  package.xml
src/quadrover_description/urdf/: camera.xacro  (+4 more)
src/quadrover_gazebo/: CMakeLists.txt  package.xml
src/quadrover_gazebo/config/: ros_gz_bridge.yaml
src/quadrover_gazebo/launch/: spawn_quadrover_sensors.launch.py
src/quadrover_gazebo/meshes/: README.md
src/quadrover_gazebo/rviz/: quadrover.rviz
src/quadrover_gazebo/scripts/: map_tf_broadcaster.py  static_joint_state_publisher.py  wheel_odom_normalizer.py
src/quadrover_localization/: CMakeLists.txt  package.xml
src/quadrover_localization/launch/: localization.launch.py
src/quadrover_localization/scripts/: odom_relay.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: controllers.yaml
src/robot_control/urdf/: robot.ros2_control.xacro
src/robot_description/: CMakeLists.txt  package.xml
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/config/: ros_gz_bridge.yaml
src/robot_gazebo/launch/: spawn_robot_sensors.launch.py
src/robot_gazebo/meshes/: README.md
src/robot_gazebo/rviz/: robot.rviz
src/robot_gazebo/scripts/: static_joint_state_publisher.py
src/robot_gazebo/worlds/: cave.sdf  empty.sdf  example.sdf  test_room.sdf
(+8 files in other folders)
